added new folders

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,50 @@ ENV/
 # Project specific standalone files
 workbench.ipynb
 
+Gap_junctions_example/*/
+Gap_junctions_example/*.csv
+Gap_junctions_example/*.out
+Adherens_junctions_example/*/
+Adherens_junctions_example/*.csv
+Adherens_junctions_example/*.out
+Actin_filaments_example/*/
+Actin_filaments_example/*.csv
+Actin_filaments_example/*.out
+Microtubules_example/*/
+Microtubules_example/*.csv
+Microtubules_example/*.out
+Mitochondria_example/*/
+Mitochondria_example/*.csv
+Mitochondria_example/*.out
+Lysosome_eample/*/
+Lysosome_eample/*.csv
+Lysosome_eample/*.out
+Desmosomes_example/*/
+Desmosomes_example/*.csv
+Desmosomes_example/*.out
+Nucleolus_DFC_example/*/
+Nucleolus_DFC_example/*.csv
+Nucleolus_DFC_example/*.out
+Plasma_membrane_example/*/
+Plasma_membrane_example/*.csv
+Plasma_membrane_example/*.out
+Matrix_adhesions_example/*/
+Matrix_adhesions_example/*.csv
+Matrix_adhesions_example/*.out
+Peroxisomes_example/*/
+Peroxisomes_example/*.csv
+Peroxisomes_example/*.out
+Endosomes_example/*/
+Endosomes_example/*.csv
+Endosomes_example/*.out
+Centrosome_example/*/
+Centrosome_example/*.csv
+Centrosome_example/*.out
+Nucleolus_Granular_Component_example/*/
+Nucleolus_Granular_Component_example/*.csv
+Nucleolus_Granular_Component_example/*.out
+
+
 ActomyosinBundlesExample/*/
 ActomyosinBundlesExample/*.csv
 ActomyosinBundlesExample/*.out
