--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,28 @@ workbench.ipynb
 examples/*/
 examples/*.csv
 examples/*.out
+AtoB/*/
+AtoB/*.csv
+AtoB/*.out
+d2dNucleolusDFC/*/
+d2dNucleolusDFC/*.csv
+d2dNucleolusDFC/*.out
+d2dNucleolusGC/*/
+d2dNucleolusGC/*.csv
+d2dNucleolusGC/*.out
+d2dTrainingAB/*/
+d2dTrainingAB/*.csv
+d2dTrainingAB/*.out
+d2dTrainingAF/*/
+d2dTrainingAF/*.csv
+d2dTrainingAF/*.out
+d2dTrainingGJ/*/
+d2dTrainingGJ/*.csv
+d2dTrainingGJ/*.out
+d2dtraining/*/
+d2dtraining/*.csv
+d2dtraining/*.out
+
 Endoplasmic_Reticulum_Predictions_Example/*/
 Endoplasmic_Reticulum_Predictions_Example/*.csv
 Endoplasmic_Reticulum_Predictions_Example/*.out
